implement billing service event publishing and order management features